:zap: filter menu item alignment fixed

--- a/src/styles/filter.scss
+++ b/src/styles/filter.scss
@@ -143,6 +143,7 @@
 
     .filter__menu_item_content_minmax {
       width: 60%;
+      justify-content: flex-start;
 
       input {
         width: 6rem;
